--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,16 @@
                     android:value=".MainActivity" />
         </activity>
 
+        <!-- History activity -->
+        <activity
+                android:name=".HistoryActivity"
+                android:exported="false" />
+
+        <!-- Edit activity -->
+        <activity
+                android:name=".EditSessionActivity"
+                android:exported="false" />
+
     </application>
 
 </manifest>
